# JPStream

./: .gitignore  CMakeLists.txt  README.html  README.md  index.html  readme.html
DFABuilder/: CMakeLists.txt
DFABuilder/include/: config_manager.hpp  dfa.h  dfa_builder.h  error_center.hpp
DFABuilder/include/Lexer/: charset.hpp  model_core.hpp  set_converter.hpp  utility.hpp
DFABuilder/src/: config_manager.cpp  dfa_builder.cpp  error_center.cpp  pass.cpp
DFABuilder/src/Lexer/: charset.cpp  dfa.cpp  dfa_compressed.cpp  dfa_mixer.cpp  dfa_simple.cpp  ecset_converter.cpp  equivalence_class.cpp  regex_model.cpp
DFAbuilder/: CMakeLists.txt  test.cpp
DFAbuilder/include/: pass.hpp
DFAbuilder/include/Lexer/: action_parser.hpp  dfa.hpp  dfa_compressed.hpp  dfa_dump.hpp  dfa_mixer.hpp  dfa_simple.hpp  ecset_converter.hpp  equivalence_class.hpp  model_core.hpp  regex_builder.hpp  regex_model.hpp  regex_parser.hpp  utf8.h  utility.hpp
DFAbuilder/interface/: dfa.h  dragontooth.h
DFAbuilder/runtime/: dragontooth.h
DFAbuilder/src/: config_manager.cpp  test.cpp
DFAbuilder/src/Lexer/: action_parser.cpp  charset.cpp  dfa.cpp  dfa_dump.cpp  dfa_mixer.cpp  ecset_converter.cpp  equivalence_class.cpp  r_parser.y  r_scanner.l  regex_builder.cpp  regex_model.cpp  regex_parser.cpp  set_converter.cpp
DFAbuilder/test/: CMakeLists.txt
JSONPathParser/: CMakeLists.txt  jsonpath_evaluator.h  jsonpath_model.h  jsonpath_parser.h  parser.y  parser_j.y  scanner_j.l
JSONQuery/: CMakeLists.txt  automaton.h  basic.c  basic.h  combiner.h  command.txt  config  constraint.c  constraint.h  file_operation.c  file_operation.h  file_partition.c  file_partition.h  global.h  input.c  input.h  jpstreamr3  json_stream.h  lexer.c  lexer.h  lexing.c  lexing.h  list.h  multi_stack.h  output.h  parallel_automata_execution.h  path_processor.h  predicate.c  predicate.h  query.c  query.h  query_test.c  semi_structure.c  semi_structure.h  stack.h  streaming_automaton.c  streaming_automaton.h  t1  tuple_list.h  twitter_store1.txt  (+5 more)
XPathParser/: CMakeLists.txt  parser.y  parser_j.y  scanner.l  scanner_j.l  test.c  xpath_builder.cpp  xpath_builder.h  xpath_model.h  xpath_verify.h
css/: style.css
dataset/: bb.json  jsonpath  random.json  rowstest.json  wiki.json
demo/: CMakeLists.txt  query_test.c
src/: dfa.cpp  dfa.h  main.c
test/: CMakeLists.txt  dfa_test.cpp  jsonpath_test.c  query_test.c
