project("JSONPathParser")

## Flex/Bison configuration
find_package(BISON REQUIRED)
find_package(FLEX REQUIRED)

if (WIN32)
    set (ADDITIONAL_FLEX_FLAGS "--wincompat")
else()
    set (ADDITIONAL_FLEX_FLAGS "")
endif()

FLEX_TARGET(SCANNER ${CMAKE_CURRENT_SOURCE_DIR}/scanner_j.l
${CMAKE_CURRENT_BINARY_DIR}/scanner_j.c COMPILE_FLAGS "--header-file=${CMAKE_CURRENT_BINARY_DIR}/scanner_j.h ${ADDITIONAL_FLEX_FLAGS}")
BISON_TARGET(PARSER ${CMAKE_CURRENT_SOURCE_DIR}/parser_j.y
${CMAKE_CURRENT_BINARY_DIR}/parser_j.c COMPILE_FLAGS "-d -v -t")
ADD_FLEX_BISON_DEPENDENCY(SCANNER PARSER)


add_library(${PROJECT_NAME} STATIC ${BISON_PARSER_OUTPUTS} ${FLEX_SCANNER_OUTPUTS})

